@@ -7,7 +7,9 @@ package org.opensearch.neuralsearch;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.Set;
 
@@ -16,6 +18,7 @@ import org.opensearch.client.Request;
 import org.opensearch.client.Response;
 import org.opensearch.common.settings.Settings;
 import org.opensearch.common.xcontent.XContentFactory;
+import org.opensearch.knn.index.VectorDataType;
 import org.opensearch.rest.RestRequest;
 
 /**
@@ -27,13 +30,28 @@ public class ValidateDependentPluginInstallationIT extends OpenSearchSecureRestT
 
     private static final String KNN_INDEX_NAME = "neuralsearchknnindexforvalidation";
     private static final String KNN_VECTOR_FIELD_NAME = "vectorField";
-    private static final Set<String> DEPENDENT_PLUGINS = Set.of("opensearch-ml", "opensearch-knn");
+    private static Set<String> DEPENDENT_PLUGINS = new HashSet<>(Collections.singleton("opensearch-ml"));
     private static final String GET_PLUGINS_URL = "_cat/plugins";
     private static final String ML_PLUGIN_STATS_URL = "_plugins/_ml/stats";
     private static final String KNN_DOCUMENT_URL = KNN_INDEX_NAME + "/_doc/1?refresh";
 
     public void testDependentPluginsInstalled() throws IOException {
         final Set<String> installedPlugins = getAllInstalledPlugins();
+
+        // detect whether JVector or Knn plugin is loaded, and update dependent plugin list accordingly
+        String jarPath = null;
+        try {
+            jarPath = VectorDataType.class.getProtectionDomain().getCodeSource().getLocation().toURI().getPath();
+        } catch (URISyntaxException e) {
+            throw new RuntimeException(e);
+        }
+        String jarFileName = jarPath.substring(jarPath.lastIndexOf('/') + 1);
+        if (jarFileName.contains("jvector")) {
+            DEPENDENT_PLUGINS.add("opensearch-jvector");
+        } else {
+            DEPENDENT_PLUGINS.add("opensearch-knn");
+        }
+
         Assert.assertTrue(installedPlugins.containsAll(DEPENDENT_PLUGINS));
     }
 
